# swtor_parser

./: .gitignore  README.md  combat_state.cpp  combat_state.h  combat_stats.cpp  combat_stats.h  example_swtor_integration.cpp  memory_helper.h  ntp_timekeeper_swtor.cpp  ntp_timekeeper_swtor.h  stat_keeper.h  swtor_parser - Copy.cpp  swtor_parser.cpp  swtor_parser.h  swtor_parser.sln  swtor_parser.vcxproj  swtor_parser.vcxproj.filters  swtor_parser_dll_hosting.sln  time_cruncher_swtor.cpp  time_cruncher_swtor.h  ~AutoRecover.swtor_parser.vcxproj
Documentation/: API_REFERENCE.md  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  INTEGRATION_GUIDE.txt  NTP_INTEGRATION_GUIDE_SWTOR.md  PLUGIN_DEVELOPMENT.md  QUICK_REFERENCE.md  QUICK_START.md  SWTOR_Parser_Integration_Guide.md  example_enhanced_usage.cpp  info.txt  swtor_combat_log_parser_integration_guide.md  swtor_parser_enhanced.h
Documentation/swtor_parser_min/: CMakeLists.txt  main.cpp  swtor_parser.cpp  swtor_parser.h
core/: base_classes.h  combat_state.cpp  combat_state.h  memory_helper.h  ntp_timekeeper_swtor.h  parse_manager.cpp  parse_manager.h  parse_plugin.h  parser_api.cpp  parser_host.cpp  plugin_api.h  plugin_loader.cpp  stat_keeper.h  swtor_parser.cpp  swtor_parser.h  swtor_parser_core.vcxproj  time_cruncher_swtor.cpp  time_cruncher_swtor.h  timing_plugin.cpp  timing_plugin.h
example_plugin/: example_damage_tracker_plugin.cpp  example_damage_tracker_plugin.vcxproj  plugin_sdk.h
example_swtor_parser/: example_swtor_integration.cpp  swtor_parser.vcxproj  swtor_parser.vcxproj.filters  test_plugin.cpp  test_plugin.h
(+55 files in other folders)
